--- a/index.html
+++ b/index.html
@@ -10,61 +10,149 @@
     <title>Framework 12bool</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="col-xs-1"></div>
-            <div class="col-xs-1"></div>
-            <div class="col-xs-1"></div>
-            <div class="col-xs-1"></div>
-            <div class="col-xs-1"></div>
-            <div class="col-xs-1"></div>
-            <div class="col-xs-1"></div>
-            <div class="col-xs-1"></div>
-            <div class="col-xs-1"></div>
-            <div class="col-xs-1"></div>
-            <div class="col-xs-1"></div>
-            <div class="col-xs-1"></div>
+            <div class="col-xs-1">
+                1 col
+            </div>
+            <div class="col-xs-1">
+                1 col
+            </div>
+            <div class="col-xs-1">
+                1 col
+            </div>
+            <div class="col-xs-1">
+                1 col
+            </div>
+            <div class="col-xs-1">
+                1 col
+            </div>
+            <div class="col-xs-1">
+                1 col
+            </div>
+            <div class="col-xs-1">
+                1 col
+            </div>
+            <div class="col-xs-1">
+                1 col
+            </div>
+            <div class="col-xs-1">
+                1 col
+            </div>
+            <div class="col-xs-1">
+                1 col
+            </div>
+            <div class="col-xs-1">
+                1 col
+            </div>
+            <div class="col-xs-1">
+                1 col
+            </div>
         </div>
         <div class="row">
-
+            <div class="col-xs-2">
+                col
+            </div>
+            <div class="col-xs-5">
+                col
+            </div>
+            <div class="col-xs-5">
+                col
+            </div>
         </div>
         <div class="row">
-
+            <div class="col-xs-12">
+                12 col
+            </div>
         </div>
         <div class="row">
-
+            <div class="col-xs-8">
+                8 col
+            </div>
+            <div class="col-xs-2">
+                2 col
+            </div>
+            <div class="col-xs-2">
+                2 col
+            </div>
         </div>
         <div class="row">
-
+            <div class="col-xs-1">
+                1 col
+            </div>
+            <div class="col-xs-2">
+                2 col
+            </div>
+            <div class="col-xs-2">
+                2 col
+            </div>
+            <div class="col-xs-6">
+                6 col
+            </div>
+            <div class="col-xs-1">
+                1 col
+            </div>
         </div>
         <div class="row">
-
+            <div class="col-xs-6">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-xs-2">
+                            Nested 2 col
+                        </div>
+                        <div class="col-xs-2">
+                            Nested 2 col
+                        </div>
+                        <div class="col-xs-8">
+                            Nested 8 col
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-6">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-xs-6">
+                            Nested 6 col
+                        </div>
+                        <div class="col-xs-6">
+                            Nested 6 col
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-
+            <div class="col-sx-12"></div>
         </div>
         <div class="row">
-
+            <div class="col-sx-1"></div>
+            <div class="col-sx-11"></div>
         </div>
         <div class="row">
-
+            <div class="col-sx-2"></div>
+            <div class="col-sx-10"></div>
         </div>
         <div class="row">
-
+            <div class="col-sx-3"></div>
+            <div class="col-sx-9"></div>
         </div>
         <div class="row">
-
+            <div class="col-sx-4"></div>
+            <div class="col-sx-8"></div>
         </div>
         <div class="row">
-
+            <div class="col-sx-5"></div>
+            <div class="col-sx-7"></div>
         </div>
         <div class="row">
-
+            <div class="col-sx-6"></div>
+            <div class="col-sx-6"></div>
         </div>
     </div>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
 
         </div>
