--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Framework 12bool</title>
 </head>
 <body>
+    <h2>Esercizio per Casa</h2>
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-1">
@@ -125,66 +126,67 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sx-12"></div>
+            <div class="col-xs-12"></div>
         </div>
         <div class="row">
-            <div class="col-sx-1"></div>
-            <div class="col-sx-11"></div>
+            <div class="col-xs-1"></div>
+            <div class="col-xs-11"></div>
         </div>
         <div class="row">
-            <div class="col-sx-2"></div>
-            <div class="col-sx-10"></div>
+            <div class="col-xs-2"></div>
+            <div class="col-xs-10"></div>
         </div>
         <div class="row">
-            <div class="col-sx-3"></div>
-            <div class="col-sx-9"></div>
+            <div class="col-xs-3"></div>
+            <div class="col-xs-9"></div>
         </div>
         <div class="row">
-            <div class="col-sx-4"></div>
-            <div class="col-sx-8"></div>
+            <div class="col-xs-4"></div>
+            <div class="col-xs-8"></div>
         </div>
         <div class="row">
-            <div class="col-sx-5"></div>
-            <div class="col-sx-7"></div>
+            <div class="col-xs-5"></div>
+            <div class="col-xs-7"></div>
         </div>
         <div class="row">
-            <div class="col-sx-6"></div>
-            <div class="col-sx-6"></div>
+            <div class="col-xs-6"></div>
+            <div class="col-xs-6"></div>
         </div>
     </div>
+    <h2>Offset</h2>
     <div class="container-fluid">
         <div class="row">
-
+            <div class="col-xs-1 col-xs-offset-11"></div>
         </div>
         <div class="row">
-
+            <div class="col-xs-2 col-xs-offset-10"></div>
         </div>
         <div class="row">
-
+            <div class="col-xs-3 col-xs-offset-9"></div>
+        </div>  
+        <div class="row">
+            <div class="col-xs-4 col-xs-offset-8"></div>
         </div>
         <div class="row">
-
+            <div class="col-xs-5 col-xs-offset-7"></div>
         </div>
         <div class="row">
-
+            <div class="col-xs-6 col-xs-offset-6"></div>
         </div>
         <div class="row">
-
+            <div class="col-xs-7 col-xs-offset-5"></div>
         </div>
         <div class="row">
-
+            <div class="col-xs-8 col-xs-offset-4"></div>
         </div>
         <div class="row">
-
+            <div class="col-xs-9 col-xs-offset-3"></div>
         </div>
         <div class="row">
-
+            <div class="col-xs-10 col-xs-offset-2"></div>
         </div>
         <div class="row">
-
-        </div>
-        <div class="row">
-
+            <div class="col-xs-11 col-xs-offset-1"></div>
         </div>
     </div>
 </body>
