--- a/bonus/index.html
+++ b/bonus/index.html
@@ -13,110 +13,125 @@
     <h2>Esercizio per Casa</h2>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-1">
+            <div class="col-display col-lg-1 col-md-1 col-sm-1 col-xs-3">
+                <div>
+                    <p class="first">1 col</p>
+                    <p class="second">3 col</p>
+                </div>
+            </div>
+            <div class="col-display col-lg-1 col-md-1 col-sm-1 col-xs-1">
                 1 col
             </div>
-            <div class="col-lg-1">
+            <div class="col-display col-lg-1 col-md-1 col-sm-1 col-xs-1">
                 1 col
             </div>
-            <div class="col-lg-1">
+            <div class="col-display col-lg-1 col-md-1 col-sm-1 col-xs-3">
+                <div>
+                    <p class="first">1 col</p>
+                    <p class="second">3 col</p>
+                </div>
+            </div>
+            <div class="col-display col-lg-1 col-md-1 col-sm-1 col-xs-1">
                 1 col
             </div>
-            <div class="col-lg-1">
+            <div class="col-display col-lg-1 col-md-1 col-sm-1 col-xs-1">
                 1 col
             </div>
-            <div class="col-lg-1">
+            <div class="col-display col-lg-1 col-md-1 col-sm-1 col-xs-3">
+                <div>
+                    <p class="first">1 col</p>
+                    <p class="second">3 col</p>
+                </div>
+            </div>
+            <div class="col-display col-lg-1 col-md-1 col-sm-1 col-xs-1">
                 1 col
             </div>
-            <div class="col-lg-1">
+            <div class="col-display col-lg-1 col-md-1 col-sm-1 col-xs-1">
                 1 col
             </div>
-            <div class="col-lg-1">
+            <div class="col-display col-lg-1 col-md-1 col-sm-1 col-xs-3">
+                <div>
+                    <p class="first">1 col</p>
+                    <p class="second">3 col</p>
+                </div>
+            </div>
+            <div class="col-display col-lg-1 col-md-1 col-sm-1 col-xs-1">
                 1 col
             </div>
-            <div class="col-lg-1">
-                1 col
-            </div>
-            <div class="col-lg-1">
-                1 col
-            </div>
-            <div class="col-lg-1">
-                1 col
-            </div>
-            <div class="col-lg-1">
-                1 col
-            </div>
-            <div class="col-lg-1">
+            <div class="col-display col-lg-1 col-md-1 col-sm-1 col-xs-1">
                 1 col
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-2">
+            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
                 col
             </div>
-            <div class="col-lg-5">
+            <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5">
                 col
             </div>
-            <div class="col-lg-5">
+            <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5">
                 col
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 12 col
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-8">
+            <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
                 8 col
             </div>
-            <div class="col-lg-2">
+            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
                 2 col
             </div>
-            <div class="col-lg-2">
+            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
                 2 col
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-1">
+            <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
                 1 col
             </div>
-            <div class="col-lg-2">
+            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
                 2 col
             </div>
-            <div class="col-lg-2">
+            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
                 2 col
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                 6 col
             </div>
-            <div class="col-lg-1">
+            <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
                 1 col
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-lg-2">
+                        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
                             Nested 2 col
                         </div>
-                        <div class="col-lg-2">
+                        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
                             Nested 2 col
                         </div>
-                        <div class="col-lg-8">
-                            Nested 8 col
+                        <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
+                            <span>
+                                <p class="first">Nested 8 col</p>
+                    <p class="second">Nested 12 col</p>
+                            </span>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="col-lg-6">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                             Nested 6 col
                         </div>
-                        <div class="col-lg-6">
+                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
                             Nested 6 col
                         </div>
                     </div>
@@ -126,67 +141,67 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-12"></div>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"></div>
         </div>
         <div class="row">
-            <div class="col-lg-1"></div>
-            <div class="col-lg-11"></div>
+            <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
+            <div class="col-lg-11 col-md-11 col-sm-11 col-xs-11"></div>
         </div>
         <div class="row">
-            <div class="col-lg-2"></div>
-            <div class="col-lg-10"></div>
+            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2"></div>
+            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10"></div>
         </div>
         <div class="row">
-            <div class="col-lg-3"></div>
-            <div class="col-lg-9"></div>
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3"></div>
+            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9"></div>
         </div>
         <div class="row">
-            <div class="col-lg-4"></div>
-            <div class="col-lg-8"></div>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"></div>
+            <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8"></div>
         </div>
         <div class="row">
-            <div class="col-lg-5"></div>
-            <div class="col-lg-7"></div>
+            <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5"></div>
+            <div class="col-lg-7 col-md-7 col-sm-7 col-xs-7"></div>
         </div>
         <div class="row">
-            <div class="col-lg-6"></div>
-            <div class="col-lg-6"></div>
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"></div>
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"></div>
         </div>
     </div>
     <h2>Offset</h2>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-1 col-lg-offset-11"></div>
+            <div class="col-lg-1 col-lg-offset-11 col-md-1 col-md-offset-11 col-sm-1 col-sm-offset-11 col-xs-1 col-xs-offset-11"></div>
         </div>
         <div class="row">
-            <div class="col-lg-2 col-lg-offset-10"></div>
+            <div class="col-lg-2 col-lg-offset-10 col-md-2 col-md-offset-10 col-sm-2 col-sm-offset-10 col-xs-2 col-xs-offset-10"></div>
         </div>
         <div class="row">
-            <div class="col-lg-3 col-lg-offset-9"></div>
+            <div class="col-lg-3 col-lg-offset-9 col-md-3 col-md-offset-9 col-sm-3 col-sm-offset-9 col-xs-3 col-xs-offset-9"></div>
         </div>  
         <div class="row">
-            <div class="col-lg-4 col-lg-offset-8"></div>
+            <div class="col-lg-4 col-lg-offset-8 col-md-4 col-md-offset-8 col-sm-4 col-sm-offset-8 col-xs-4 col-xs-offset-8"></div>
         </div>
         <div class="row">
-            <div class="col-lg-5 col-lg-offset-7"></div>
+            <div class="col-lg-5 col-lg-offset-7 col-md-5 col-md-offset-7 col-sm-5 col-sm-offset-7 col-xs-5 col-xs-offset-7"></div>
         </div>
         <div class="row">
-            <div class="col-lg-6 col-lg-offset-6"></div>
+            <div class="col-lg-6 col-lg-offset-6 col-md-6 col-md-offset-6 col-sm-6 col-sm-offset-6 col-xs-6 col-xs-offset-6"></div>
         </div>
         <div class="row">
-            <div class="col-lg-7 col-lg-offset-5"></div>
+            <div class="col-lg-7 col-lg-offset-5 col-md-7 col-md-offset-5 col-sm-7 col-sm-offset-5 col-xs-7 col-xs-offset-5"></div>
         </div>
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-4"></div>
+            <div class="col-lg-8 col-lg-offset-4 col-md-8 col-md-offset-4 col-sm-8 col-sm-offset-4 col-xs-8 col-xs-offset-4"></div>
         </div>
         <div class="row">
-            <div class="col-lg-9 col-lg-offset-3"></div>
+            <div class="col-lg-9 col-lg-offset-3 col-md-9 col-md-offset-3 col-sm-9 col-sm-offset-3 col-xs-9 col-xs-offset-3"></div>
         </div>
         <div class="row">
-            <div class="col-lg-10 col-lg-offset-2"></div>
+            <div class="col-lg-10 col-lg-offset-2 col-md-10 col-md-offset-2 col-sm-10 col-sm-offset-2 col-xs-10 col-xs-offset-2"></div>
         </div>
         <div class="row">
-            <div class="col-lg-11 col-lg-offset-1"></div>
+            <div class="col-lg-11 col-lg-offset-1 col-md-11 col-md-offset-1 col-sm-11 col-sm-offset-1 col-xs-11 col-xs-offset-1"></div>
         </div>
     </div>
 </body>
